--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -35,6 +35,11 @@
     📩 תיבת ההודעות שלי
     <span id="notification-icon">🔔</span>
   </header>
+  <div id="messages"></div>
+<form id="send-form">...</form>
+<input id="search" />
+<select id="tag-filter">...</select>
+<input type="file" id="attachment" />
   <nav>
     <button id="tab-inbox" class="active">📥 התקבלו</button>
     <button id="tab-sent">📤 נשלחו</button>
