--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>📩 תיבת הודעות</title>
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/mailbox.css" />
   <style>
     body { font-family: sans-serif; background: #f7f9fc; margin: 0; display: flex; flex-direction: column; min-height: 100vh; }
     header { background: #0057a3; color: white; padding: 1rem; text-align: center; font-size: 1.6rem; position: relative; }
