--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -77,6 +77,12 @@
         <option value="תמיכה">תמיכה</option>
       </select>
     </div>
+      <!-- תצוגת הודעה נבחרת -->
+  <div id="message-preview" class="w-1/2 p-4 overflow-y-auto h-screen bg-white">
+    <h3 class="text-lg font-semibold">תצוגה מקדימה</h3>
+    <div id="preview-content" class="mt-4"></div>
+  </div>
+</div>
 
     <section id="inbox">
       <h2>📥 ההודעות שהתקבלו</h2>
@@ -101,6 +107,7 @@
       </div>
       <div id="thread-summary"></div>
     </section>
+  
 
     <section id="thread-view">
       <h2>💬 תצוגת שרשור</h2>
