--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -115,6 +115,7 @@
     </section>
   </div>
 
+  <script src="/js/inbox-ui.js"></script>
   <script src="js/inbox.js"></script>
   <script src="js/notifications.js"></script>
   <script src="js/inbox-ai.js"></script>
