--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -35,6 +35,17 @@
     📩 תיבת ההודעות שלי
     <span id="notification-icon">🔔</span>
   </header>
+  <input id="search" placeholder="חיפוש בתיבה..." />
+<select id="tag-filter">
+  <option value="">הכל</option>
+  <option value="admin">מנהל</option>
+  <option value="family">משפחה</option>
+</select>
+<input id="date-filter" type="date" />
+
+<div id="inbox-list" class="inbox-list"></div>
+<div id="preview-pane" class="preview-pane">בחר הודעה לצפייה</div>
+
   <div id="messages"></div>
 <form id="send-form">...</form>
 <input id="search" />
