--- a/public/memorials/frank.html
+++ b/public/memorials/frank.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<html lang="he" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>Frank van der Velde - עמוד זיכרון</title>
+  <title>Frank van der Velde -Memorial Page</title>
   <link rel="stylesheet" href="/style.css">
   <style>
     .candle {
@@ -21,22 +21,22 @@
   <main class="container">
     <h1>עמוד זיכרון: Frank van der Velde</h1>
     <img src="/images/frank.jpg" alt="תמונתו של פרנק ון דר ולדה" style="max-width:300px;border-radius:12px;margin:10px 0">
-    <p><strong>נולד:</strong> 1943, מזרח לונדון, דרום אפריקה</p>
-    <p><strong>נפטר:</strong> 6 ביולי 2025, קייפ טאון</p>
+    <p><strong>נולד:</strong> 1943, West London, South Africa</p>
+    <p><strong>נפטר:</strong> July 6th, 2025 , Cape Town/p>
 
     <div class="candle"></div>
-    <button onclick="lightCandle()">🕯️ הדלק נר לזכרו</button>
-    <p id="candleMessage" style="color:orange;display:none;">הנר הודלק. יהי זכרו ברוך.</p>
+    <button onclick="lightCandle()">🕯️ Lit a candle for him</button>
+    <p id="candleMessage" style="color:orange;display:none;">The candle has been lighted.</p>
 
     <section>
-      <h2>קצת על פרנק</h2>
-      <p>פרנק ון דר ולדה, ראש עיריית קייפטאון לשעבר (1991–1993), היה פעיל שלום, לוחם למען צדק חברתי ואב מסור. הוא ליווה את תקופת המעבר לדמוקרטיה בדרום אפריקה, ונכח בקבלת נלסון מנדלה ופרנק צ'יקאנה להסכם השלום הלאומי.</p>
+      <h2>A bit about Frank</h2>
+      <p>Frank van der Velde, former mayor of Cape Town (1991–1993), was a peace activist, social justice fighter and devoted father. He accompanied the transition to democracy in South Africa, and was present at the acceptance of Nelson Mandela and Frank Chicana into the National Peace Agreement..</p>
 
-      <p>“When I think of Frank, two words come to mind: With and For...” – בנו, מארק.</p>
-      <p>“I will find you in a level of brave and noble...” – בנו, ג'ייסון.</p>
+      <p>“When I think of Frank, two words come to mind: With and For...” – His son, Dr. Mark van der Velde.</p>
+      <p>“I will find you in a level of brave and noble...” – His son , Dr.Jason van der Velde.</p>
     </section>
 
-    <p class="restricted">גישה לעמוד זה מוגבלת לבני משפחת ון דר ולדה בלבד.</p>
+    <p class="restricted">Access to this limited only to Van der Velde Family Members.</p>
   </main>
 
   <script>
