--- a/public/memorials/frank.html
+++ b/public/memorials/frank.html
@@ -21,8 +21,8 @@
   <main class="container">
     <h1>עמוד זיכרון: Frank van der Velde</h1>
     <img src="/images/frank.jpg" alt="תמונתו של פרנק ון דר ולדה" style="max-width:300px;border-radius:12px;margin:10px 0">
-    <p><strong>נולד:</strong> 1943, West London, South Africa</p>
-    <p><strong>נפטר:</strong> July 6th, 2025 , Cape Town/p>
+    <p><strong>Birth:</strong> 1943, West London, South Africa</p>
+    <p><strong>Death:</strong> July 6th, 2025 , Cape Town/p>
 
     <div class="candle"></div>
     <button onclick="lightCandle()">🕯️ Lit a candle for him</button>
