--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -8,6 +8,11 @@
     .compose-form { display: none; }
     .compose-form.show { display: block; }
     .preview-pane { background: #fff; border-radius: 8px; box-shadow: 0 0 4px rgba(0,0,0,0.1); padding: 1rem; margin-top: 1rem; min-height: 200px; }
+    .msg-card img.thumb { max-width: 100px; max-height: 100px; margin-top: 0.5rem; border-radius: 4px; }
+    .msg-card.important { background: #fff8cc; border-left: 4px solid orange; }
+    .drafts { margin-top: 2rem; background: #f2f2f2; padding: 1rem; border-radius: 8px; }
+    .drafts h3 { margin-bottom: 0.5rem; }
+    .reply-count { font-size: 0.85rem; color: #555; }
   </style>
   <script>
     fetch("/api/user").then(res => { if (!res.ok) location.href = "/login.html" });
@@ -63,6 +68,11 @@
     <div id="message-preview" class="preview-pane">
       <h3>תצוגה מקדימה</h3>
       <div id="preview-content"></div>
+    </div>
+
+    <div class="drafts">
+      <h3>📝 טיוטות שמורות</h3>
+      <ul id="drafts-list"></ul>
     </div>
 
     <section id="contacts">
