--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -144,5 +144,7 @@
   <script src="/js/stats.js"></script>
   <script src="/js/inbox-ai.js"></script>
   <script src="/js/notifications.js"></script>
+  <script src="/js/compose-ui.js"></script>
+<script src="/js/drafts.js"></script>
 </body>
 </html>
