--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -122,6 +122,7 @@
         <button type="button" onclick="saveDraft()">💾 שמור טיוטה</button>
       </div>
 
+      <div id="drafts-container"></div>
       <div id="messages"></div>
       <div id="preview-content">📭 אין הודעה נבחרת</div>
     </div>
@@ -145,6 +146,6 @@
   <script src="/js/inbox-ai.js"></script>
   <script src="/js/notifications.js"></script>
   <script src="/js/compose-ui.js"></script>
-<script src="/js/drafts.js"></script>
+  <script src="/js/drafts.js"></script>
 </body>
 </html>
