--- a/public/forum.html
+++ b/public/forum.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <script src="js/forum.js"></script>
+  <script src="forum.js"></script>
   <script>
     function toggleDarkMode() {
       document.body.classList.toggle("dark-mode");
