--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -151,5 +151,10 @@
   <script src="/js/notifications.js"></script>
   <script src="/js/compose-ui.js"></script>
   <script src="/js/drafts.js"></script>
+  <script src="/js/compose-ui.js"></script>
+<script src="/js/drafts.js"></script>
+<script src="/js/autocomplete.js"></script>
+<script src="/js/forward.js"></script>
+
 </body>
 </html>
