--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -86,6 +86,19 @@
   </style>
 </head>
 <body>
+  <div id="user-profile" style="text-align:left; padding: 0.5rem;"></div>
+
+<script>
+  fetch("/api/user")
+    .then(res => res.json())
+    .then(user => {
+      if (user.username)
+        document.getElementById("user-profile").innerHTML = `
+          <span style="font-weight:bold;">${user.username}</span>
+          <span style="color:gray;">(${user.role})</span>
+          <a href="/logout" style="margin-right:10px; color: red;">התנתק</a>
+        `;
+    });
   <header>
     <h1>📩 תיבת ההודעות</h1>
     <button id="compose-toggle">📝 Compose</button>
